@@ -2,7 +2,7 @@ package crayon.tasklist;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import crayon.enums.TaskType;
 import crayon.exceptions.CrayonIllegalArgumentException;
@@ -32,6 +32,7 @@ public class TaskList {
      */
     public TaskList(List<Task> tasks) {
         this.tasks.addAll(tasks);
+        assert this.tasks.stream().noneMatch(Objects::isNull) : "Task List cannot contain null items";
     }
 
     /**
@@ -83,6 +84,8 @@ public class TaskList {
         validateTaskId(taskId);
         Task task = tasks.get(taskId - 1);
         task.markDone();
+
+        assert task.getDoneStatus() : "Task should be marked as done after calling markTaskAsDone";
         return task;
     }
 
@@ -97,6 +100,8 @@ public class TaskList {
         validateTaskId(taskId);
         Task task = tasks.get(taskId - 1);
         task.markUndone();
+
+        assert !task.getDoneStatus() : "Task should be marked as undone after calling markTaskAsUndone";
         return task;
     }
 
@@ -107,9 +112,13 @@ public class TaskList {
      * @return The list of tasks that match the pattern.
      */
     public List<Task> filterTasks(String pattern) {
-        return tasks.stream()
+        List<Task> filteredTask = tasks.stream()
                 .filter(task -> task.getDescription().contains(pattern))
-                .collect(Collectors.toList());
+                .toList();
+
+        assert filteredTask.stream().allMatch(task -> task.getDescription().contains(pattern))
+                : "Filtered Tasks must contain the given pattern";
+        return filteredTask;
     }
 
     /**
